# thesis-project

./: .gitignore  ARCHITECTURE.md  KEY-FINDINGS.md  LICENSE  README.md  SECURITY_NOTICE.md  backend-prompts.md  error-and-bug-fixes.md  frontend-prompts.md  prompts.md
.codacy/: codacy.yaml
backend/hospital-system/: .env.example  Cargo.toml
backend/hospital-system/src/: config.rs  main.rs
backend/hospital-system/src/api/: mod.rs  patients.rs  records.rs  shared.rs
backend/hospital-system/src/database/: connection.rs  mod.rs  queries.rs
backend/hospital-system/src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  rate_limits.rs  sanitize_logs.rs
backend/hospital-system/src/models/: mod.rs  patient.rs  record.rs
backend/hospital-system/src/utils/: audit.rs  error_handler.rs  mod.rs
backend/police-system/: .env.example  Cargo.toml
backend/police-system/src/: main.rs
backend/police-system/src/api/: cases.rs  mod.rs  shared.rs  suspects.rs
backend/police-system/src/database/: connection.rs  mod.rs  queries.rs
backend/police-system/src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs
backend/police-system/src/models/: case.rs  mod.rs  suspect.rs
backend/police-system/src/utils/: audit.rs  logging.rs  mod.rs
docs/: API.md  TESTING.md  backend-testing-checklist.md  psql-guide.md
docs/prompts/: backend-prompts.md  bug-fixes.md  frontend-prompts.md  full-security-audit.md  prompts.md
docs/security/: generate-cert-and-keys.md
frontend/: .env.example  .gitignore  INSTALLATION.md  README.md  SETUP_SUMMARY.md  START_HERE.md  eslintrc.cjs  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/hospital-ui/: package.json
frontend/hospital-ui/public/: index.html
frontend/hospital-ui/src/: App.css  App.tsx
frontend/police-ui/: package.json
frontend/police-ui/public/: index.html
frontend/police-ui/src/: App.css  App.tsx
frontend/src/: App.tsx  index.css  main.tsx  styles.css  types.ts
frontend/src/components/: HospitalData.tsx  PoliceData.tsx
frontend/src/components/common/: DataForm.tsx  NotificationBanner.tsx
frontend/src/components/layout/: AppLayout.tsx  Footer.tsx  Header.tsx
frontend/src/components/police/: SuspectsList.tsx
frontend/src/hooks/: useCrossSystemQuery.ts  useHospitalData.ts  usePoliceData.ts  usePolling.ts
frontend/src/pages/: CrossSystemDashboard.tsx  HospitalDashboard.tsx  PoliceDashboard.tsx
frontend/src/services/: api.ts  hospitalApi.ts  policeApi.ts  types.ts
frontend/src/types/: index.ts
frontend/src/utils/: csrf.ts  formatting.ts  validation.ts
shared/database-schemas/: hospital-schema.sql  police-schema.sql  schema.sql  seed-data.sql
testing/: README.md  WARNING.md  instructions.md  run-all-scans.sh
testing/nmap/: instructions.md  run-all-scans.sh
testing/owasp-zap/: backend-to-backend.sh  frontend-to-backend.sh  instructions-back2back.md  instructions-front2back.md  owasp-zap-instructions.md  run-all-owasp-zap-scans.sh
testing/zap/: guide.md  instructions.md
