[package]
name = "hospital-system"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hospital backend service for thesis project"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment and configuration
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1