[package]
name = "hospital-system"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hospital backend service for thesis project"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment and configuration
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Security
sha2 = "0.10"
hex = "0.4"
constant_time_eq = "0.3"

# Rate limiting
actix-governor = "0.5"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
lazy_static = "1.5.0"

# Async utilities
futures-util = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1