[package]
name = "hospital-system"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hospital backend service for thesis project"

[dependencies]
# Web framework with rustls support
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-cors = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment and configuration
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Security
sha2 = "0.10"
hex = "0.4"
constant_time_eq = "0.3"
subtle = "2.5"

# Rate limiting
actix-governor = "0.5"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
lazy_static = "1.5.0"

# Async utilities
futures-util = "0.3"

# TLS support
rustls = "0.21"
rustls-pemfile = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1